--- a/templates/admin/panel.phtml
+++ b/templates/admin/panel.phtml
@@ -1,4 +1,8 @@
-<nav class="nav justify-content-center">
+<nav class="nav justify-content-center mt-3">
+  <p class="nav-text">MOVIES</p>
   <a class="nav-link" href="showList"><h4>List</h4></a>
   <a class="nav-link" href="showAdd"><h4>Add</h4></a>
+  <p class="nav-text">GENRES</p>
+  <a class="nav-link" href="showGenreList"><h4>List</h4></a>
+  <a class="nav-link" href="showAddGenre"><h4>Add</h4></a>
 </nav>
