--- a/templates/genres.phtml
+++ b/templates/genres.phtml
@@ -1,7 +1,7 @@
 <main class="container-fluid d-flex justify-content-center">
   <div class="list-group mt-3">
     <?php foreach ($genresAndNumberOfMovies as $key => $numberOfMovies) : ?>
-      <a href="genre/<?= urlencode($key) ?>" class="list-group-item list-group-item-action border-secondary"><?= $key ?> (<?= $numberOfMovies ?>)</a>
+      <a href="genre/<?= htmlspecialchars(urlencode($key)) ?>" class="list-group-item list-group-item-action border-secondary"><?= htmlspecialchars($key) ?> (<?= $numberOfMovies ?>)</a>
     <?php endforeach ?>
   </div>
   </ul>
