--- a/templates/movie.phtml
+++ b/templates/movie.phtml
@@ -2,17 +2,17 @@
   <div class="card mt-3 border-secondary" style="max-width: 740px;">
     <div class="row g-0">
       <div class="col-md-6">
-        <img src="https://image.tmdb.org/t/p/w1280<?= $movie->poster_path ?>" class="img-fluid rounded-start" alt="img movie">
+        <img src="https://image.tmdb.org/t/p/w1280<?= htmlspecialchars($movie->poster_path) ?>" class="img-fluid rounded-start" alt="img movie">
       </div>
       <div class="col-md-6">
         <div class="card-body">
-          <h5 class="card-title"><?= $movie->title ?></h5>
-          <p class="card-text"><?= $movie->overview ?></p>
-          <p class="card-text"><small class="text-body-secondary"><?= $movie->release_date ?></small></p>
+          <h5 class="card-title"><?= htmlspecialchars($movie->title) ?></h5>
+          <p class="card-text"><?= htmlspecialchars($movie->overview) ?></p>
+          <p class="card-text"><small class="text-body-secondary"><?= htmlspecialchars($movie->release_date) ?></small></p>
         </div>
         <div class="card-body">
-          <p class="card-text"><?= $movie->company ?></p>
-          <a href="genre/<?= urlencode($movie->main_genre) ?>" class="card-link"><?= $movie->main_genre ?></a>
+          <p class="card-text"><?= htmlspecialchars($movie->company) ?></p>
+          <a href="genre/<?= htmlspecialchars(urlencode($movie->main_genre)) ?>" class="card-link"><?= htmlspecialchars($movie->main_genre) ?></a>
         </div>
       </div>
     </div>
