se agrega acción de insertar imágen

--- a/templates/admin/edit.phtml
+++ b/templates/admin/edit.phtml
@@ -1,5 +1,5 @@
 <main class="container-fluid mt-3">
-  <form action="edit" method="post" class="text-center">
+  <form action="edit" method="post" enctype="multipart/form-data" class="text-center">
     <div class="mb-3">
       <input type="number" name="id_movie" class="form-control" readonly value="<?= htmlspecialchars($movie->id_movie) ?>">
     </div>
@@ -7,13 +7,13 @@
       <input type="text" name="title" class="form-control" required value="<?= htmlspecialchars($movie->title) ?>">
     </div>
     <div class="mb-3">
-      <input type="text" name="poster_path" class="form-control" required value="<?= htmlspecialchars($movie->poster_path) ?>">
+      <input type="file" name="poster_path" class="form-control" required>
     </div>
     <div class="mb-3">
       <input type="date" name="release_date" class="form-control" required value="<?= htmlspecialchars($movie->release_date) ?>">
     </div>
     <div class="mb-3">
-      <textarea name="overview" class="form-control" required><?= htmlspecialchars($movie->overview) ?></textarea>
+      <textarea name="overview" class="form-control" rows="3" required><?= htmlspecialchars($movie->overview) ?></textarea>
     </div>
     <div class="mb-3">
       <input type="text" name="company" class="form-control" required value="<?= htmlspecialchars($movie->company) ?>">
@@ -26,5 +26,6 @@
       <?php endforeach ?>
     </select>
     <button type="submit" class="btn btn-primary">Confirm</button>
+    <a href="showList" class="btn btn-secondary">Cancel</a>
   </form>
 </main>
