--- a/templates/movie.phtml
+++ b/templates/movie.phtml
@@ -2,7 +2,7 @@
   <div class="card mt-3 border-secondary" style="max-width: 740px;">
     <div class="row g-0">
       <div class="col-md-6">
-        <img src="https://image.tmdb.org/t/p/w1280<?= htmlspecialchars($movie->poster_path) ?>" class="img-fluid rounded-start" alt="img movie">
+        <img src="<?= htmlspecialchars($movie->poster_path) ?>" class="img-fluid rounded-start" alt="img movie">
       </div>
       <div class="col-md-6">
         <div class="card-body">
