--- a/templates/admin/insertGenre.phtml
+++ b/templates/admin/insertGenre.phtml
@@ -7,5 +7,6 @@
       <input type="text" name="main_genre" class="form-control" required placeholder="main_genre">
     </div>
     <button type="submit" class="btn btn-primary">Confirm</button>
+    <a href="showGenreList" class="btn btn-secondary">Cancel</a>
   </form>
 </main>
