--- a/templates/movies.phtml
+++ b/templates/movies.phtml
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center flex-wrap">
     <?php foreach ($movies as $key => $movie) : ?>
       <div class="card text-bg-dark m-2" style="width: 12rem;">
-        <img src="https://image.tmdb.org/t/p/w1280<?= htmlspecialchars($movie->poster_path) ?>" class="card-img opacity-75" alt="img movie">
+        <img src="<?= htmlspecialchars($movie->poster_path) ?>" class="card-img opacity-75" alt="img movie">
         <div class="card-img-overlay d-flex align-items-end">
           <a href="movie/<?= htmlspecialchars(urlencode($movie->title)) ?>" style="text-decoration: none; color: white;">
             <h5 class="card-title"><?= htmlspecialchars($movie->title) ?></h5>
